Bringing you smoother experience! 

- Fixed design of login form
