@@ -3,6 +3,7 @@ import 'dart:ui';
 import 'package:flutter/material.dart';
 import 'package:flutter/services.dart';
 import 'package:flutter_bloc/flutter_bloc.dart';
+import 'package:flutter_cache_manager/flutter_cache_manager.dart';
 import 'package:flutter_feather_icons/flutter_feather_icons.dart';
 import 'package:spot/app/constants.dart';
 import 'package:spot/components/frosted_dialog.dart';
@@ -15,6 +16,7 @@ import 'package:spot/models/video.dart';
 import 'package:spot/pages/profile_page.dart';
 import 'package:spot/repositories/repository.dart';
 import 'package:video_player/video_player.dart';
+import 'package:share/share.dart';
 
 import '../app/constants.dart';
 import '../components/app_scaffold.dart';
@@ -178,6 +180,13 @@ class _VideoScreenState extends State<VideoScreen> {
                     },
                   ),
                   Text(widget._video.likeCount.toString()),
+                  const SizedBox(height: 36),
+                  IconButton(
+                    onPressed: () {
+                      BlocProvider.of<VideoCubit>(context).shareVideo();
+                    },
+                    icon: const Icon(FeatherIcons.share2),
+                  ),
                   const SizedBox(height: 36),
                   PopupMenuButton<VideoMenu>(
                     onSelected: (VideoMenu result) async {
